class init, and method implemented

--- a/Compiler/C_Code/PyCList/MakeFile
+++ b/Compiler/C_Code/PyCList/MakeFile
@@ -37,5 +37,5 @@ $(EXECUTABLE): $(OBJECTS) $(FOBJECTS)
 
 # Clean rule
 clean:
-	rm -f $(OBJECTS) $(EXECUTABLE)
+	rm -f $(OBJECTS) $(EXECUTABLE) test1.o
 
